Organized code, fixed flickering, tagged it properly, labeled texts, introduced alt to images.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ main,
     height: auto;
 }
 
-.btn1 {
+/*.btn1 {
     color: green;
     background-color: red;
 }
@@ -22,7 +22,7 @@ main,
 .btn2 {
     color: crimson;
     background-color: green;
-}
+}*/
 
 footer,
 .footer {
@@ -30,10 +30,8 @@ footer,
     color: white;
 }
 
-.flashy-text {
+/*.flashy-text {
     color: aqua;
-    animation: blink-animation 0.2s steps(5, start) infinite;
-    -webkit-animation: blink-animation 0.2s steps(5, start) infinite;
 }
 
 @keyframes blink-animation {
@@ -45,4 +43,4 @@ footer,
     to {
         visibility: hidden;
     }
-}
+}/*
